--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "numpy>=1.26.4,<2",
     "pandas>=2.2.0",
     "pytest>=8.3.4",
-    "PyPDF2>=3.0.0",
+    "pypdf>=3.9.0",
     "scikit-learn>=1.6.1",
     "sentence-transformers>=2.2.2",
     "tiktoken>=0.9.0",
@@ -156,7 +156,7 @@ module = [
     "langchain.*",
     "langchain_core.*",
     "torch.*",
-    "PyPDF2.*",
+    "pypdf.*",
     "sentence_transformers.*",
     "chromadb.*",
     "llama_cpp.*"
