Fix directory_loader and XML security issues, update dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,8 @@ minversion = "6.0"
 addopts = "-ra -q"
 testpaths = ["tests"]
 python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
 pythonpath = [".", "src"]
 asyncio_default_fixture_loop_scope = "function"
 markers = [
